Return 412 if book has already been published
