# app/api/swagger.json
@@ -67,6 +67,43 @@
         }
       }
     },
+    "/book/{id}/publish": {
+      "get": {
+        "summary": "Publish a book",
+        "produces": "application/json",
+        "parameters": [{
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "string"
+        }],
+        "responses": {
+          "200": {
+            "content": "application/json",
+            "schema": {
+              "type": "string",
+              "example": {
+                "publishedAt": "2019-05-15T09:57:41.379Z"
+              }
+            }
+          },
+          "404": {
+            "schema": {
+              "content": "application/json",
+              "type": "object",
+              "$ref": "#/definitions/Error"
+            }
+          },
+          "412": {
+            "schema": {
+              "content": "application/json",
+              "type": "object",
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    },
     "/book": {
       "post": {
         "summary": "Create a book",
